@@ -1,3 +1,4 @@
+Micro tab: Added new images for micro sugar and salt shakers
 Micro tab: Factored out SoluteConstituent
 Micro tab: Increased the random walk component when particles flowing to the drain
 Micro tab: Moved the drain faucet input point into the solution instead of being past the exterior of the beaker
